sharing has new table layout for users page and user items page

--- a/NCloud/NCloud/Views/Shared/Components/SharingDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/SharingDetailsTable/Table.cshtml
@@ -13,22 +13,85 @@
             {
                 <tr>
                     <td>
-                        <details>
-                            <summary>
+                        @if (item.Info is not null)
+                        {
+                            <details>
+                                <summary>
+                                    <span id="iconforitemtype">
+                                        <img src="@item.IconPath" width="20" height="20" class="item align-bottom">
+                                    </span>
+                                    <a asp-action="Details" asp-route-folderName="@item.Info!.Name" class="itemlink">@item.Info.Name</a>
+                                </summary>
+                                <fieldset class="border border-dark p-2 m-2 rounded">
+                                    <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
+                                    <table class="table table-striped rounded">
+                                        <tr>
+                                            <td>
+                                                Created Time
+                                            </td>
+                                            <td>
+                                                @item.Info.CreationTime
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                Last Modified Time
+                                            </td>
+                                            <td>
+                                                @item.Info.LastWriteTime
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                Shared in @Constants.AppName
+                                            </td>
+                                            <td>
+                                                @if (item.IsConnectedToApp)
+                                                {
+                                                    <span>✔</span>
+                                                }
+                                                else
+                                                {
+                                                    <span>❌</span>
+                                                }
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                Public
+                                            </td>
+                                            <td>
+                                                @if (item.IsConnectedToWeb)
+                                                {
+                                                    <span>✔</span>
+                                                }
+                                                else
+                                                {
+                                                    <span>❌</span>
+                                                }
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </fieldset>
+                                @if (Model.Owner)
+                                {
+                                    <div class="d-flex justify-content-end">
+                                        <div class="btn-group me-2 my-3" role="group">
+                                            <a class="btn btn-primary" asp-controller="Sharing" asp-action="DisconnectDirectoryFromApp" asp-route-id="@item.Info.Name"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
+                                        </div>
+                                    </div>
+                                }
+                            </details>
+                        }
+                        else
+                        {
+                            <div>
                                 <span id="iconforitemtype">
                                     <img src="@item.IconPath" width="20" height="20" class="item align-bottom">
                                 </span>
-                                <a asp-action="Details" asp-route-folderName="@(item.Info is not null ? item.Info.Name : item.SharedName)" class="itemlink">@(item.Info is not null ? item.Info.Name : item.SharedName)</a>
-                            </summary>
-                            @if (Model.Owner)
-                            {
-                                <div class="d-flex justify-content-end">
-                                    <div class="btn-group me-2 my-3" role="group">
-                                        <a class="btn btn-primary" asp-controller="Sharing" asp-action="DisconnectDirectoryFromApp" asp-route-id="@item.SharedName"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
-                                    </div>
-                                </div>
-                            }
-                        </details>
+                                <a asp-action="Details" asp-route-folderName="@item.SharedName" class="itemlink">@item.SharedName</a>
+                            </div>
+                        }
                     </td>
                 </tr>
             }
@@ -39,22 +102,93 @@
             {
                 <tr>
                     <td>
-                        <details>
-                            <summary>
+                        @if (item.Info is not null)
+                        {
+                            <details>
+                                <summary>
+                                    <span id="iconforitemtype">
+                                        <img src="@item.IconPath" width="20" height="20" class="item align-bottom">
+                                    </span>
+                                    <a asp-action="Details" asp-route-folderName="@item.Info!.Name" class="itemlink">@item.Info.Name</a>
+                                </summary>
+                                <fieldset class="border border-dark p-2 m-2 rounded">
+                                <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
+                                <table class="table table-striped rounded">
+                                    <tr>
+                                        <td>
+                                            Created Time
+                                        </td>
+                                        <td>
+                                            @item.Info.CreationTime
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            Last Modified Time
+                                        </td>
+                                        <td>
+                                            @item.Info.LastWriteTime
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            Size
+                                        </td>
+                                        <td>
+                                            @item.Info.Length Byte(s)
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            Shared in @Constants.AppName
+                                        </td>
+                                        <td>
+                                            @if (item.IsConnectedToApp)
+                                            {
+                                                <span>✔</span>
+                                            }
+                                            else
+                                            {
+                                                <span>❌</span>
+                                            }
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            Public
+                                        </td>
+                                        <td>
+                                            @if (item.IsConnectedToWeb)
+                                            {
+                                                <span>✔</span>
+                                            }
+                                            else
+                                            {
+                                                <span>❌</span>
+                                            }
+                                        </td>
+                                    </tr>
+                                </table>
+                            </fieldset>
+                                @if (Model.Owner)
+                                {
+                                    <div class="d-flex justify-content-end">
+                                        <div class="btn-group me-2 my-3" role="group">
+                                            <a class="btn btn-primary" asp-controller="Sharing" asp-action="DisconnectDirectoryFromApp" asp-route-id="@item.Info.Name"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
+                                        </div>
+                                    </div>
+                                }
+                            </details>
+                        }
+                        else
+                        {
+                            <div>
                                 <span id="iconforitemtype">
                                     <img src="@item.IconPath" width="20" height="20" class="item align-bottom">
                                 </span>
-                                <span class="itemlink">@(item.Info is not null ? item.Info.Name : item.SharedName)</span>
-                            </summary>
-                            @if (Model.Owner)
-                            {
-                                <div class="d-flex justify-content-end">
-                                    <div class="btn-group me-2 my-3" role="group">
-                                        <a class="btn btn-primay" asp-controller="Sharing" asp-action="DisconnectFileFromApp" asp-route-id="@item.SharedName"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
-                                    </div>
-                                </div>
-                            }
-                        </details>
+                                <a asp-action="Details" asp-route-folderName="@item.SharedName" class="itemlink">@item.SharedName</a>
+                            </div>
+                        }
                     </td>
                 </tr>
             }
