--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -16,7 +16,7 @@
                         <details>
                             <summary>
                                 <span id="iconforitemtype">
-                                    <img src="@item.IconPath" width=" 20" height="20" class="item rounded align-center">
+                                    <img src="@item.IconPath" width=" 20" height="20" class="item align-center">
                                 </span>
                                 <a asp-action="Details" asp-route-folderName="@item.Info.Name" class="itemlink">@item.Info!.Name</a>
                             </summary>
@@ -24,7 +24,7 @@
                                 <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
                                 <table class="table table-striped rounded">
                                     <tr>
-                                        <td>
+                                        <td class="ps-3">
                                             Created By
                                         </td>
                                         <td>
@@ -32,7 +32,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td class="ps-3">
                                             Created Time
                                         </td>
                                         <td>
@@ -40,7 +40,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td class="ps-3">
                                             Last Modified Time
                                         </td>
                                         <td>
@@ -48,7 +48,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td class="ps-3">
                                             Shared in @Constants.AppName
                                         </td>
                                         <td>
@@ -63,7 +63,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td class="ps-3">
                                             Public
                                         </td>
                                         <td>
@@ -77,6 +77,18 @@
                                             }
                                         </td>
                                     </tr>
+                                    @if (item.IsConnectedToWeb)
+                                    {
+                                        string? url = Url.Action(Model.WebControllerAndActionForDetails.Second, Model.WebControllerAndActionForDetails.First, new { path = item.HashedPath }, Context.Request.Scheme);
+                                        <tr class="align-middle">
+                                            <td>
+                                                <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard(@url)"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
+                                            </td>
+                                            <td>
+                                                <a href="@url" class="text-decoration-none">@url</a>
+                                            </td>
+                                        </tr>
+                                    }
                                 </table>
                             </fieldset>
                             <div class="d-flex justify-content-end">
@@ -115,7 +127,7 @@
                         <details>
                             <summary>
                                 <span id="iconforitemtype">
-                                    <img src="@item.IconPath" width=" 20" height="20" class="item rounded align-center">
+                                    <img src="@item.IconPath" width=" 20" height="20" class="item align-center">
                                 </span>
                                 <span class="itemlink">@item.Info!.Name</span>
                             </summary>
@@ -123,7 +135,7 @@
                                 <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
                                 <table class="table table-striped rounded">
                                     <tr>
-                                        <td>
+                                        <td class="ps-3">
                                             Created By
                                         </td>
                                         <td>
@@ -131,7 +143,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td class="ps-3">
                                             Created Time
                                         </td>
                                         <td>
@@ -139,7 +151,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td class="ps-3">
                                             Last Modified Time
                                         </td>
                                         <td>
@@ -147,7 +159,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td class="ps-3">
                                             Size
                                         </td>
                                         <td>
@@ -155,7 +167,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td class="ps-3">
                                             Shared in @Constants.AppName
                                         </td>
                                         <td>
@@ -170,7 +182,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td class="ps-3">
                                             Public
                                         </td>
                                         <td>
@@ -184,6 +196,18 @@
                                             }
                                         </td>
                                     </tr>
+                                    @if (item.IsConnectedToWeb)
+                                    {
+                                        string? url = Url.Action(Model.WebControllerAndActionForDownload.Second, Model.WebControllerAndActionForDownload.First, new { path = System.IO.Path.Combine(Model.CurrentPath,item.Info.Name) }, Context.Request.Scheme);
+                                        <tr class="align-middle">
+                                            <td>
+                                                <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard(@url)"><span>Download</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
+                                            </td>
+                                            <td>
+                                                <a href="@url" class="text-decoration-none">@url</a>
+                                            </td>
+                                        </tr>
+                                    }
                                 </table>
                             </fieldset>
                             <div class="d-flex justify-content-end">
@@ -216,3 +240,9 @@
         }
     </tbody>
 </table>
+
+<script type="text/javascript">
+    function copyToClipBoard(url){
+        navigator.clipboard.writeText(url);
+    }
+</script>
