--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -85,7 +85,7 @@
                                                 <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard(@url)"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
                                             </td>
                                             <td>
-                                                <a href="@url" class="text-decoration-none">@url</a>
+                                                <a href="@url" class="text-decoration-none" target="_blank">@url</a>
                                             </td>
                                         </tr>
                                     }
@@ -204,7 +204,7 @@
                                                 <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard(@url)"><span>Download</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
                                             </td>
                                             <td>
-                                                <a href="@url" class="text-decoration-none">@url</a>
+                                                <a href="@url" class="text-decoration-none" target="_blank">@url</a>
                                             </td>
                                         </tr>
                                     }
