--- a/NCloud/NCloud/Views/_ViewImports.cshtml
+++ b/NCloud/NCloud/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using NCloud
-@using NCloud.Models
 @using NCloud.ViewModels
 @using NCloud.ConstantData
+@using NCloud.Models
+@using NCloud.Models.Extensions
 @addTagHelper *, DNTCaptcha.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
