hashing not working

--- a/NCloud/NCloud/Views/DashBoard/Index.cshtml
+++ b/NCloud/NCloud/Views/DashBoard/Index.cshtml
@@ -23,7 +23,7 @@
         @foreach (var folderUrl in Model.SharedFolderUrls)
         {
             <ul class="list-group list-group-horizontal mt-1">
-                <li class="list-group-item list-group-item-action text-dark">@folderUrl.Replace(System.IO.Path.DirectorySeparatorChar, Constants.PathSeparator).Slice(Constants.PrivateRootName.Length, Constants.PrivateRootName.Length + Constants.GuidLength + 1)</li>
+                <li class="list-group-item list-group-item-action text-dark">@folderUrl.Replace(System.IO.Path.DirectorySeparatorChar, Constants.PathSeparator)</li>
             </ul>
 
             string? url = Url.Action(Model.WebControllerAndActionForDetails.Second, Model.WebControllerAndActionForDetails.First, new { path = folderUrl }, Context.Request.Scheme);
@@ -40,7 +40,7 @@
     @foreach (var fileUrl in Model.SharedFileUrls)
     {
         <ul class="list-group list-group-horizontal mt-1">
-            <li class="list-group-item list-group-item-action text-dark">@fileUrl.Replace(System.IO.Path.DirectorySeparatorChar, Constants.PathSeparator).Slice(Constants.PrivateRootName.Length, Constants.PrivateRootName.Length + Constants.GuidLength + 1)</li>
+            <li class="list-group-item list-group-item-action text-dark">@fileUrl.Replace(System.IO.Path.DirectorySeparatorChar, Constants.PathSeparator)</li>
         </ul>
 
         string? url = Url.Action(Model.WebControllerAndActionForDownload.Second, Model.WebControllerAndActionForDownload.First, new { path = fileUrl }, Context.Request.Scheme);
